bk_ida/gccida/g2/expand_expr
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6495:41: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_expr( tree exp, rtx target, machine_mode tmode, expand_modifier modifier) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6495:61: error: must use 'enum' tag to refer to type 'expand_modifier'
rtx  expand_expr( tree exp, rtx target, machine_mode tmode, expand_modifier modifier) 
                                                            ^
                                                            enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6497:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6511:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6515:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6520:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6523:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6532:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v40; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6536:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6537:1: error: must use 'enum' tag to refer to type 'expand_modifier'
expand_modifier v45; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6548:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v56; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6554:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v62; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6567:4: error: expected ';' after expression
rtx v75; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6567:5: error: use of undeclared identifier 'v75'
rtx v75; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6569:4: error: expected ';' after expression
rtx v77; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6569:5: error: use of undeclared identifier 'v77'
rtx v77; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6570:4: error: expected ';' after expression
rtx v78; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6570:5: error: use of undeclared identifier 'v78'
rtx v78; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/expr.c:6572:4: error: expected ';' after expression
rtx v80; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_expr/src/obj/expr.o] Error 1
